--- a/style.css
+++ b/style.css
@@ -36,6 +36,10 @@ html {
     background-size: cover;
     background-position: center;
     flex: 1;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
   }
 
   .panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
@@ -49,6 +53,7 @@ html {
     margin: 0;
     width: 100%;
     transition: transform 0.5s;
+    border: 1px solid red;
   }
 
   .panel p {
