--- a/style.css
+++ b/style.css
@@ -65,7 +65,6 @@ body {
 	margin: 0;
 	width: 100%;
 	transition: transform 0.5s;
-	border: 1px solid red;
 	flex: 1 0 auto;
 	display: flex;
 	justify-content: center;
@@ -99,5 +98,7 @@ body {
 }
 
 .panel.open {
-	font-size: 40px;
+    font-size: 40px;
+    flex: 5;
+    /* saying will take up 5x amount of space of others when have this class */
 }
